<resources>
    <string name="app_name">SaintAlert</string>
    <string name="nChannel">nChannel</string>
    <string name="dChannel">a notification</string>
    <string name="october">October</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="november">November</string>
    <string name="december">December</string>
</resources>
